discussion/kv_engine/97134/97134_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-30547: Fix build break - skip Manifesttest::toJSON on Clang < 8

Initialization of `input` vector fails on Clang 7 - temporarily
skip to fix build breakage:

    [ 90%] Building CXX object kv_engine/engines/ep/CMakeFiles/ep-engine_ep_unit_tests.dir/tests/module_tests/collections/vbucket_manifest_entry_test.cc.o
    kv_engine/engines/ep/tests/module_tests/collections/manifest_test.cc:209:24: error: no viable conversion from 'CollectionEntry::Entry' to 'std::string' (aka 'basic_string<char, char_traits<char>, allocator<char> >')
                         {{CollectionEntry::defaultC},
                           ^~~~~~~~~~~~~~~~~~~~~~~~~
    /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:1326:5: note: candidate constructor not viable: no known conversion from 'CollectionEntry::Entry' to 'const std::__1::basic_string<char> &' for 1st argument
        basic_string(const basic_string& __str);
        ^
    /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:1330:5: note: candidate constructor not viable: no known conversion from 'CollectionEntry::Entry' to 'std::__1::basic_string<char> &&' for 1st argument
        basic_string(basic_string&& __str)
        ^
    /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:1335:31: note: candidate constructor not viable: no known conversion from 'CollectionEntry::Entry' to 'const value_type *' (aka 'const char *') for 1st argument
        _LIBCPP_INLINE_VISIBILITY basic_string(const value_type* __s);
                                  ^
    /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:1356:5: note: candidate constructor not viable: no known conversion from 'CollectionEntry::Entry' to 'initializer_list<value_type>' for 1st argument
        basic_string(initializer_list<value_type> __il);
        ^
    kv_engine/engines/ep/tests/module_tests/collections/test_manifest.h:64:5: note: candidate function
        operator CollectionID() const {
    ^

Change-Id: I13d1b0d7c5172a4f0d2c47d4f6f27253916030bf

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2018-07-19 08:07:37.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2018-07-19 08:36:00.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-threadsanitizer-master/2347/ : ABORTED

Compile error at     kv_engine/engines/ep/tests/module_tests/collections/manifest_test.cc:209:24:
error: no viable conversion from "CollectionEntry::Entry" to "std::string" (aka "basic_string<char, char_traits<char>, allocator<char> >")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-threadsanitizer-master/2347/ )

http://cv.jenkins.couchbase.com/job/kv_engine-ASan-UBSan-master/200/ : ABORTED

Compile error at     kv_engine/engines/ep/tests/module_tests/collections/manifest_test.cc:209:24:
error: no viable conversion from "CollectionEntry::Entry" to "std::string" (aka "basic_string<char, char_traits<char>, allocator<char> >")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-ASan-UBSan-master/200/ )

http://cv.jenkins.couchbase.com/job/kv_engine-linux-master/10484/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">1 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine-linux-master/10484/ )

Compile error at     kv_engine/engines/ep/tests/module_tests/collections/manifest_test.cc:209:24:
error: no viable conversion from "CollectionEntry::Entry" to "std::string" (aka "basic_string<char, char_traits<char>, allocator<char> >")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-linux-master/10484/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/9329/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/10613/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/9467/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
